--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
     <title>Pet Listing</title>
+    <link rel="stylesheet" href="petlisting.css">
 
     <body>
         <header>
