add section filter

--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -21,6 +21,10 @@
             <h1>Pet Listing</h1>
             <p>Short Description</p>
 
+            <section class="filter">
+            <!-- ตัวกรอง Type, Gender, Health, Breed, Age -->
+            </section>
+
             <div class="pet-list">
                 <div class="pet-card">
                     <a href="petdetail.html?id=1">
