add style head and short description

--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -17,9 +17,9 @@
             </nav>
         </header>
 
-        <main>
+        <main class="pet-listing">
             <h1>Pet Listing</h1>
-            <p>Short Description</p>
+            <p class="description">Short Description</p>
 
             <section class="filter">
             <!-- ตัวกรอง Type, Gender, Health, Breed, Age -->
