new branch & homepage layout

--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -2,27 +2,33 @@
 <html lang="en">
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="homepageStyle.css">
+    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Adoption System</title>
 
     <body>
         <header>
-            <nav>
-                <ul>
-                    <li><a href="homepage.html">Homepage</a></li>
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="homepageResources/icon.png" alt="Logo">
+                </div>
+
+                <ul class="nav-links">
+                    <li><a href="้hompage.html" class="active">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
-                    <li><a href="contact.html">About/contact</a></li>
-                    <li><a href="login.html">Log in</a></li>
+                    <li><a href="contact.html">About/Contact Us</a></li>
                 </ul>
+
+                <button class="login-btn">Log in</button>
             </nav>
         </header>
 
         <main>
-
+            <h1>Introduction</h1>
         </main>
 
         <footer>
-        
+            <h1>footer for smth</h1>
         </footer>
     </body>
 </html>
-
