--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -27,10 +27,38 @@
 
             <div class="pet-list">
                 <div class="pet-card">
-                    <a href="petdetail.html?id=1">
                         <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p>น้องส้ม</p>
-                    </a>
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
+                </div>
+
+                <div class="pet-card">
+                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                        <p class="name">น้องส้ม</p>
                 </div>
             </div>
 
