update navigation bar

--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -19,9 +19,11 @@
                     <li><a href="homepage.html" class="active">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
                     <li><a href="contact.html">About/Contact Us</a></li>
-                </ul>
-                
-                <button class="login-btn">Log in</button>
+                </ul> 
+
+                <a href="login.html">
+                    <button class="login-btn">Log in</button> 
+                </a>
             </nav>
         </header>
 
