--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -2,17 +2,28 @@
 <html lang="en">
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
-    <title>Pet Listing</title>
+    <link rel="stylesheet" href="homepageStyle.css">
+    <link href="https://fonts.googleapis.com/css2?family=Mali&family=Itim&family=Kodchasan&display=swap" rel="stylesheet">
+    
+    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
+    <title>Pet Adoption System</title>
 
     <body>
         <header>
-            <nav>
-                <ul>
+            <nav class="navbar">
+                <div class="logo">
+                    <img src="homepageResources/icon.png" alt="Logo">
+                </div>
+
+                <ul class="nav-links">
                     <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="petlisting.html">Pet Listing</a></li>
-                    <li><a href="contact.html">About/contact</a></li>
-                    <li><a href="login.html">Log in</a></li>
-                </ul>
+                    <li><a href="petlisting.html" class="active">Pet Listing</a></li>
+                    <li><a href="contact.html">About/Contact Us</a></li>
+                </ul> 
+
+                <a href="login.html">
+                    <button class="login-btn">Log in</button> 
+                </a>
             </nav>
         </header>
 
