--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -4,7 +4,7 @@
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="contact.css">    
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
-    <title>About/Contact Us</title>
+    <title>About/Contact Us | Pet Adoption System</title>
     
     <body>
         <header>
