--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -4,7 +4,7 @@
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="homepage.css">    
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
-    <title>Pet Adoption System</title>
+    <title>Homepage | Pet Adoption System</title>
 
     <body>
         <header>
