--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -4,7 +4,7 @@
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />   
     <link rel="stylesheet" href="petlisting.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
-    <title>Pet Listing</title>
+    <title>Pet Listing | Pet Adoption System</title>
 
     <body>
         <header>
