--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -73,7 +73,27 @@
         </main>
 
         <footer>
-        
+            <div class="footer">
+                <div class="about">
+                    <div class="logo">
+                        <img src="homepageResources/icon.png" alt="Logo">
+                    </div>
+                    <p>Pet Adoption System</p>
+                    <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
+                </div>
+
+                <div class="social-container">
+                    <a href="#" class="social-btn">
+                        <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                        <span>Pet Adoption</span>
+                    </a>
+
+                    <a href="#" class="social-btn">
+                        <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                        <span>pet_adoption</span>
+                    </a>
+                </div>                
+            </div>
         </footer>
 
         <script scr="petlisting.js"></script>
