add & edit some details

--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pet details | Pet Adoption System</title>
     <link rel="stylesheet" href="petdetail.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
+    <title>Pet details | Pet Adoption System</title>
 </head>
 <body>
-    <!-- Header -->
+    <!-- navigation bar -->
     <header>
         <nav class="navbar">
             <div class="logo">
