--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -1,102 +1,105 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="th-en">
+<head>
     <meta charset="UTF-8" />
-    <meta name="veiwport" content="width=device-width, initial-scale=1.0" />   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />   
     <link rel="stylesheet" href="petlisting.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Listing | Pet Adoption System</title>
+</head>
+<body>
+    <!-- navigation bar -->
+    <header>
+        <nav class="navbar">
+            <div class="logo">
+                <img src="homepageResources/icon.png" alt="Logo">
+            </div>
 
-    <body>
-        <header>
-            <nav class="navbar">
+            <ul class="nav-links">
+                <li><a href="homepage.html">Homepage</a></li>
+                <li><a href="petlisting.html" class="active">Pet Listing</a></li>
+                <li><a href="contact.html">About/Contact Us</a></li>
+            </ul> 
+
+            <a href="login.html">
+                <button class="login-btn">Log in</button> 
+            </a>
+        </nav>
+    </header>
+
+    <main class="pet-listing">
+        <h1>Pet Listing</h1>
+        <p class="description">Short Description</p>
+
+        <section class="filter">
+        <!-- ตัวกรอง Type, Gender, Health, Breed, Age -->
+        </section>
+
+        <div class="pet-list">
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+
+            <div class="pet-card">
+                    <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
+                    <p class="name">น้องส้ม</p>
+            </div>
+        </div>
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+        <div class="footer">
+            <div class="about">
                 <div class="logo">
                     <img src="homepageResources/icon.png" alt="Logo">
                 </div>
+                <p>Pet Adoption System</p>
+                <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
+            </div>
 
-                <ul class="nav-links">
-                    <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="petlisting.html" class="active">Pet Listing</a></li>
-                    <li><a href="contact.html">About/Contact Us</a></li>
-                </ul> 
-
-                <a href="login.html">
-                    <button class="login-btn">Log in</button> 
+            <div class="social-container">
+                <a href="#" class="social-btn">
+                    <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
+                    <span>Pet Adoption</span>
                 </a>
-            </nav>
-        </header>
 
-        <main class="pet-listing">
-            <h1>Pet Listing</h1>
-            <p class="description">Short Description</p>
+                <a href="#" class="social-btn">
+                    <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
+                    <span>pet_adoption</span>
+                </a>
+            </div>                
+        </div>
+    </footer>
 
-            <section class="filter">
-            <!-- ตัวกรอง Type, Gender, Health, Breed, Age -->
-            </section>
-
-            <div class="pet-list">
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-
-                <div class="pet-card">
-                        <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
-                        <p class="name">น้องส้ม</p>
-                </div>
-            </div>
-
-        </main>
-
-        <footer>
-            <div class="footer">
-                <div class="about">
-                    <div class="logo">
-                        <img src="homepageResources/icon.png" alt="Logo">
-                    </div>
-                    <p>Pet Adoption System</p>
-                    <p class="location">เลขที่ 11/1 ชั้น 1 ห้อง 111 อาคารสาทรธานี 1 ถนนสาทรเหนือ<br>แขวงสีลม เขตบางรัก กรุงเทพมหานคร 10100<br>Tel : 011-111-1111</p>
-                </div>
-
-                <div class="social-container">
-                    <a href="#" class="social-btn">
-                        <img src="homepageResources/FacebookLogo.png" alt="Facebook icon">
-                        <span>Pet Adoption</span>
-                    </a>
-
-                    <a href="#" class="social-btn">
-                        <img src="homepageResources/InstagramLogo.png" alt="Instagram icon">
-                        <span>pet_adoption</span>
-                    </a>
-                </div>                
-            </div>
-        </footer>
-
-        <script scr="petlisting.js"></script>
-    </body>
+    <script scr="petlisting.js"></script>
+</body>
 </html>
 
