--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="contact.css">    
+    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="all.css">    
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>About/Contact Us</title>
     
@@ -16,13 +17,17 @@
                 <ul class="nav-links">
                     <li><a href="homepage.html">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
-                    <li><a href="contact.html" class="active">About/Contact Us</a></li>
+                    <li class="active"><a href="contact.html" class="active">About/Contact Us</a></li>
                 </ul> 
 
                 <a href="login.html">
                     <button class="login-btn">Log in</button> 
                 </a>
             </nav>
+
+            <div class="hamburger">
+                ☰
+            </div>
         </header>
 
         <main>
@@ -32,6 +37,8 @@
         <footer>
         
         </footer>
+
+        <script src="all.js"></script>
 
     </body>
 </html>
