--- a/src/main/resources/static/homepage.html
+++ b/src/main/resources/static/homepage.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="homepage.css">    
+    <link rel="stylesheet" href="all.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Adoption System</title>
 
@@ -14,7 +15,7 @@
                 </div>
 
                 <ul class="nav-links">
-                    <li><a href="homepage.html" class="active">Homepage</a></li>
+                    <li class="active"><a href="homepage.html" class="active">Homepage</a></li>
                     <li><a href="petlisting.html">Pet Listing</a></li>
                     <li><a href="contact.html">About/Contact Us</a></li>
                 </ul> 
@@ -23,6 +24,10 @@
                     <button class="login-btn">Log in</button> 
                 </a>
             </nav>
+
+            <div class="hamburger">
+                ☰
+            </div>
         </header>
 
         <main>
@@ -42,5 +47,7 @@
         <footer>
             <h1>footer for smth</h1>
         </footer>
+
+        <script src="all.js"></script>
     </body>
 </html>
