--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ทำความรู้จักน้อง - Pet Adoption</title>
     <link rel="stylesheet" href="petdetail.css">
+    <link rel="stylesheet" href="all.css">
+    <div class="hamburger">
+        ☰
+    </div>
 </head>
 <body>
     <!-- Header -->
@@ -93,6 +97,7 @@
     </div>
 
     <script src="petdetail.js"></script>
+    <script src="all.js"></script>
     
 </body>
 </html>
