--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="veiwport" content="width=device-width, initial-scale=1.0" />   
     <link rel="stylesheet" href="petlisting.css">
+    <link rel="stylesheet" href="all.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Listing</title>
 
@@ -15,14 +16,19 @@
 
                 <ul class="nav-links">
                     <li><a href="homepage.html">Homepage</a></li>
-                    <li><a href="petlisting.html" class="active">Pet Listing</a></li>
+                    <li class="active"><a href="petlisting.html" class="active">Pet Listing</a></li>
                     <li><a href="contact.html">About/Contact Us</a></li>
                 </ul> 
 
                 <a href="login.html">
                     <button class="login-btn">Log in</button> 
                 </a>
+            
             </nav>
+
+            <div class="hamburger">
+                ☰
+            </div>
         </header>
 
         <main class="pet-listing">
@@ -76,7 +82,9 @@
         
         </footer>
 
-        <script scr="petlisting.js"></script>
+        <script src="petlisting.js"></script>
+        <script src="all.js"></script>
+
     </body>
 </html>
 
