add style petlisting.css

--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -40,54 +40,62 @@
                 <div class="two-block">
                     <div class="four-block">
                         <div class="type">
-                            Type
-                            <div class="pick"><i class="fa-solid fa-dog"></i>
-                                Dog
-                            </div>
-                            <div class="pick"><i class="fa-solid fa-cat"></i>
-                                Cat
-                            </div>
-                        </div>
-                        <div class="type">
-                            Gender
-                            <div class="pick"><i class="fa-solid fa-mars"></i>
-                                Male
-                            </div>
-                            <div class="pick"><i class="fa-solid fa-venus"></i>
-                                Female
+                            <p>Type</p>
+                            <div class="mini-select">
+                                <div class="pick"><i class="fa-solid fa-dog"></i>
+                                    Dog
+                                </div>
+                                <div class="pick"><i class="fa-solid fa-cat"></i>
+                                    Cat
+                                </div>
                             </div>
                         </div>
                         <div class="type">
-                            Health/Vaccine
-                            <div class="pick">
-                                ทำหมันแล้ว
-                            </div>
-                            <div class="pick">
-                                ฉีดวัคซีนแล้ว
+                            <p>Gender</p>
+                            <div class="mini-select">
+                                <div class="pick"><i class="fa-solid fa-mars"></i>
+                                    Male
+                                </div>
+                                <div class="pick"><i class="fa-solid fa-venus"></i>
+                                    Female
+                                </div>
                             </div>
                         </div>
                         <div class="type">
-                            Breed
-                            <div class="pick">
-                                Persian
+                            <p>Health/Vaccine</p>
+                            <div class="mini-select">
+                                <div class="pick">
+                                    ทำหมันแล้ว
+                                </div>
+                                <div class="pick">
+                                    ฉีดวัคซีนแล้ว
+                                </div>
                             </div>
-                            <div class="pick">
-                                Labubu
+                        </div>
+                        <div class="type">
+                            <p>Breed</p>
+                            <div class="mini-select">
+                                <div class="pick">
+                                    Persian
+                                </div>
+                                <div class="pick">
+                                    Labubu
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <label for="age-filter">Age</label>
+                    <label for="age-filter"><p>Age</p>
                         <select id="age-filter">
                             <option value="">ทั้งหมด</option>
                             <option value="baby">0-1 ปี</option>
                             <option value="young">1-5 ปี</option>
                             <option value="adult">5-10 ปี</option>
                             <option value="senior">10 ปีขึ้นไป</option>
-                        </select>
+                        </select></label>
                 </div>
             </section>
 
-            <div class="pet-list">
+            <section class="pet-list">
                 <div class="pet-card">
                         <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
                         <p class="name">น้องส้ม</p>
@@ -122,7 +130,7 @@
                         <img src="https://i.pinimg.com/736x/0e/a3/6e/0ea36ee7bc893407525f1d30b72702cb.jpg" alt="image" width="100">
                         <p class="name">น้องส้ม</p>
                 </div>
-            </div>
+            </section>
 
         </main>
 
