--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -37,63 +37,66 @@
             <p class="description">Short Description</p>
 
             <section class="filter">
-                <div class="two-block">
-                    <div class="four-block">
-                        <div class="type">
-                            <p>Type</p>
-                            <div class="mini-select">
-                                <div class="pick"><i class="fa-solid fa-dog"></i>
-                                    Dog
-                                </div>
-                                <div class="pick"><i class="fa-solid fa-cat"></i>
-                                    Cat
-                                </div>
-                            </div>
+                <div class="filter-grid">
+                    <fieldset class="filter-group">
+                        <legend>Type</legend>
+                        <div class="options-wrapper">
+                            <input type="radio" id="type-dog" name="animal-type" value="dog" style="display: none;">
+                            <label for="type-dog" class="pick"><i class="fa-solid fa-dog"></i> Dog</label>
+
+                            <input type="radio" id="type-cat" name="animal-type" value="cat" style="display: none;">
+                            <label for="type-cat" class="pick"><i class="fa-solid fa-cat"></i> Cat</label>
                         </div>
-                        <div class="type">
-                            <p>Gender</p>
-                            <div class="mini-select">
-                                <div class="pick"><i class="fa-solid fa-mars"></i>
-                                    Male
-                                </div>
-                                <div class="pick"><i class="fa-solid fa-venus"></i>
-                                    Female
-                                </div>
-                            </div>
+                    </fieldset>
+
+                    <fieldset class="filter-group">
+                        <legend>Gender</legend>
+                        <div class="options-wrapper">
+                            <input type="radio" id="gender-male" name="gender" value="male" style="display: none;">
+                            <label for="gender-male" class="pick"><i class="fa-solid fa-mars"></i> Male</label>
+
+                            <input type="radio" id="gender-female" name="gender" value="female" style="display: none;">
+                            <label for="gender-female" class="pick"><i class="fa-solid fa-venus"></i> Female</label>
                         </div>
-                        <div class="type">
-                            <p>Health/Vaccine</p>
-                            <div class="mini-select">
-                                <div class="pick">
-                                    ทำหมันแล้ว
-                                </div>
-                                <div class="pick">
-                                    ฉีดวัคซีนแล้ว
-                                </div>
-                            </div>
+                    </fieldset>
+
+                    <fieldset class="filter-group">
+                        <legend>Health/Vaccine</legend>
+                        <div class="options-wrapper">
+                            <input type="checkbox" id="health-neutered" name="health" value="neutered" style="display: none;">
+                            <label for="health-neutered" class="pick">ทำหมันแล้ว</label>
+
+                            <input type="checkbox" id="health-vaccinated" name="health" value="vaccinated" style="display: none;">
+                            <label for="health-vaccinated" class="pick">ฉีดวัคซีนแล้ว</label>
                         </div>
-                        <div class="type">
-                            <p>Breed</p>
-                            <div class="mini-select">
-                                <div class="pick">
-                                    Persian
-                                </div>
-                                <div class="pick">
-                                    Labubu
-                                </div>
-                            </div>
+                    </fieldset>
+
+                    <fieldset class="filter-group">
+                        <legend>Breed</legend>
+                        <div class="options-wrapper">
+                            <input type="checkbox" id="breed-persian" name="breed" value="Persian" style="display: none;">
+                            <label for="breed-persian" class="pick">Persian</label>
+
+                            <input type="checkbox" id="breed-labubu" name="breed" value="Labubu" style="display: none;">
+                            <label for="breed-labubu" class="pick">Labubu</label>
                         </div>
-                    </div>
-                    <label for="age-filter"><p>Age</p>
-                        <select id="age-filter">
+                    </fieldset>
+
+                    <fieldset class="filter-group" id="age-group">
+                        <p>Age</p>
+                        <select id="age-filter" name="age">
                             <option value="">ทั้งหมด</option>
                             <option value="baby">0-1 ปี</option>
                             <option value="young">1-5 ปี</option>
                             <option value="adult">5-10 ปี</option>
                             <option value="senior">10 ปีขึ้นไป</option>
-                        </select></label>
+                        </select>
+                        <button id="apply-filters-btn">Search</button>
+                    </fieldset>   
                 </div>
             </section>
+
+
 
             <section class="pet-list">
                 <div class="pet-card">
