--- a/src/main/resources/static/petlisting.html
+++ b/src/main/resources/static/petlisting.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
     <title>Pet Listing | Pet Adoption System</title>
+</head>
 
     <body>
         <header>
