--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -6,11 +6,15 @@
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="login.css">
+    <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
 </head>
 <body>
     <section class="login-card">
         <div class="login-container">
-            <div class="branding"></div>
+            <div class="branding">
+                <img src="homepageResources/icon.png" alt="Logo">
+                <p>Pet Adoption</p>
+            </div>
             <h1>Log in</h1>
             <div class="input-container">
                 <div class="input-group">
@@ -29,8 +33,9 @@
                 <p class="divider-text">or</p>
                 <div class="line"></div>
             </div>
-            <div class="register-group">
-                <p>Don’t have an account? <a href="#" class="register">Sign Up</a></p>
+            <div class="register-container">
+                <p>Don’t have an account?</p>
+                <a href="#" class="register">Sign Up</a>
             </div>
         </div>
     </section>
