change cat breed in petdetail.html

--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -56,7 +56,7 @@
                         <li>ชนิด แมว</li>
                         <li>เพศ ผู้</li>
                         <li>อายุ 2 ปี</li>
-                        <li>สายพันธุ์ ไม่ม่ให</li>
+                        <li>สายพันธุ์ พันท้ายนรสิงห์</li>
                         <li>น้ำหนัก 5 กิโลกรัม</li>
                     </ul>
                 </div>
