--- a/src/main/resources/static/petdetail.html
+++ b/src/main/resources/static/petdetail.html
@@ -82,7 +82,8 @@
 
         
         <div class="buttons">
-            <button class="btn btn-secondary" id="backBtn">ย้อนกลับ</button>
+            <a href="petlisting.html" style="text-decoration: none; color: inherit;">
+            <button class="btn btn-secondary" id="backBtn">ย้อนกลับ</button></a>
             <button class="btn btn-primary" id="adoptBtn">ขอรับเลี่้ยง</button>
         </div>
     </div>
