login fe update

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <section class="login-card">
         <div class="login-container">
             <div class="branding">
-                <img src="homepageResources/icon.png" alt="Logo">
+                <img src="homepageResources/pet-house.png" alt="Logo">
                 <p>Pet Adoption</p>
             </div>
             <h1>Log in</h1>
@@ -27,6 +27,9 @@
                     <i class="fa-solid fa-eye-slash" id="togglePassword"></i>
                 </div>
             </div>
+
+            <button type="submit" class="login-btn">Log In</button>
+
             <a href="#" class="forgot-password">Forgot password?</a>
             <div class="divider-container">
                 <div class="line"></div>
