register finish style

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="login-register.css">
     <link rel="icon" href="homepageResources/icon.png" type="image/x-icon">
 </head>
 <body>
-    <section class="login-card">
-        <div class="login-container">
+    <section class="card">
+        <div class="container">
             <div class="branding">
                 <img src="homepageResources/pet-house.png" alt="Logo">
                 <p>Pet Adoption</p>
@@ -28,7 +28,7 @@
                 </div>
             </div>
 
-            <button type="submit" class="login-btn">Log In</button>
+            <button type="submit" class="confirm-btn">Log In</button>
 
             <a href="#" class="forgot-password">Forgot password?</a>
             <div class="divider-container">
@@ -36,9 +36,9 @@
                 <p class="divider-text">or</p>
                 <div class="line"></div>
             </div>
-            <div class="register-container">
+            <div class="change-container">
                 <p>Don’t have an account?</p>
-                <a href="#" class="register">Sign Up</a>
+                <a href="register.html" class="change">Sign Up</a>
             </div>
         </div>
     </section>
