--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -18,13 +18,20 @@
             <h1>Log in</h1>
             <div class="input-container">
                 <div class="input-group">
-                    <i class="fa-solid fa-user icon"></i>
-                    <input type="text" class="username-input" placeholder="Username or Email Address" required>
+                    <div class="input-wrapper"> 
+                        <i class="fa-solid fa-user icon"></i>
+                        <input type="text" id="username" class="username-input" placeholder="Username or Email Address">
+                    </div>
+                    <small class="error-message" id="username-error"></small>
                 </div>
+
                 <div class="input-group">
-                    <i class="fa-solid fa-key icon"></i>
-                    <input type="password" id="password-input" class="password-input" placeholder="Password" required>
-                    <i class="fa-solid fa-eye-slash" id="togglePassword"></i>
+                    <div class="input-wrapper">
+                        <i class="fa-solid fa-key icon"></i>
+                        <input type="password" id="password" class="password-input" placeholder="Password">
+                        <i class="fa-solid fa-eye-slash" id="togglePassword"></i>
+                    </div>
+                    <small class="error-message" id="password-error"></small>
                 </div>
             </div>
 
