--- a/src/main/resources/static/contact.html
+++ b/src/main/resources/static/contact.html
@@ -55,7 +55,7 @@
                 <hr>
             </div>
 
-            <div>
+            <div class="contact">
                 <div class="footer">
                     <div class="about">
                         <div class="logo">
